--- a/MinioConverter.UI/MinioConverter.UI.csproj
+++ b/MinioConverter.UI/MinioConverter.UI.csproj
@@ -8,12 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Minio" Version="6.0.2" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference Include="..\MinioConverter\MinioConverter.Domain.csproj" />
   </ItemGroup>
 
 </Project>
